force-app/main/default/objects/BER__c/BER__c.object-meta.xml
<CustomObject>
    <label>BER</label>
    <nameField>
        <label>Code BER</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BERs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>