force-app/main/default/objects/BER__c/fields/Chef_de_district__c.field-meta.xml
<CustomField>
    <fullName>Chef_de_district__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chef de district</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BERs3</relationshipName>
    <type>Lookup</type>
</CustomField>