force-app/main/default/objects/BER__c/fields/Chef_de_district_nom__c.field-meta.xml
<CustomField>
    <fullName>Chef_de_district_nom__c</fullName>
    <label>Chef de district</label>
    <length>255</length>
    <type>Text</type>
</CustomField>