force-app/main/default/objects/BER__c/fields/Chef_de_region__c.field-meta.xml
<CustomField>
    <fullName>Chef_de_region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chef de region</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BERs2</relationshipName>
    <type>Lookup</type>
</CustomField>