force-app/main/default/objects/BER__c/fields/Code_atelier__c.field-meta.xml
<CustomField>
    <fullName>Code_atelier__c</fullName>
    <label>Code atelier/BER</label>
    <length>40</length>
    <type>Text</type>
</CustomField>