force-app/main/default/objects/BER__c/fields/CodeBER__c.field-meta.xml
<CustomField>
    <fullName>CodeBER__c</fullName>
    <externalId>true</externalId>
    <label>Code BER</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>