force-app/main/default/objects/BER__c/fields/Compte_partenaire_associe__c.field-meta.xml
<CustomField>
    <fullName>Compte_partenaire_associe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte partenaire associe</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BERs</relationshipLabel>
    <relationshipName>BERs</relationshipName>
    <type>Lookup</type>
</CustomField>