force-app/main/default/objects/BER__c/fields/Date_de_d_but_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>Date_de_d_but_de_contrat__c</fullName>
    <description>Date de début de contrat de partenariat</description>
    <inlineHelpText>Date de début de contrat de partenariat</inlineHelpText>
    <label>Date de début de contrat</label>
    <type>Date</type>
</CustomField>