force-app/main/default/objects/BER__c/fields/Date_de_fin_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_contrat__c</fullName>
    <description>Date de fin de contrat de partenariat</description>
    <inlineHelpText>Date de fin de contrat de partenariat</inlineHelpText>
    <label>Date de fin de contrat</label>
    <type>Date</type>
</CustomField>