force-app/main/default/objects/BER__c/fields/Marque_reseau_de_distribution__c.field-meta.xml
<CustomField>
    <fullName>Marque_reseau_de_distribution__c</fullName>
    <description>Les marques présents dans le réseau de distribution</description>
    <label>Marque (réseau de distribution)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>DasWeltAuto</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
            <value>
                <fullName>Fleet Solutions</fullName>
            </value>
            <value>
                <fullName>Seat</fullName>
            </value>
            <value>
                <fullName>Skoda</fullName>
            </value>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
            <value>
                <fullName>Volkswagen Utilitaires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>