force-app/main/default/objects/BER__c/fields/Numero_contrat_Code_atelier_BER__c.field-meta.xml
<CustomField>
    <fullName>Numero_contrat_Code_atelier_BER__c</fullName>
    <label>Code BER</label>
    <length>40</length>
    <type>Text</type>
</CustomField>