force-app/main/default/objects/BER__c/fields/RefId__c.field-meta.xml
<CustomField>
    <fullName>RefId__c</fullName>
    <externalId>true</externalId>
    <label>RefId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>