force-app/main/default/objects/BER__c/fields/Region_VGF__c.field-meta.xml
<CustomField>
    <fullName>Region_VGF__c</fullName>
    <label>Région VGF</label>
    <length>80</length>
    <type>Text</type>
</CustomField>