force-app/main/default/objects/BER__c/fields/Responsable_de_region__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable de region</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BERs</relationshipName>
    <type>Lookup</type>
</CustomField>