force-app/main/default/objects/BER__c/fields/Responsable_de_region_nom__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_region_nom__c</fullName>
    <label>Responsable de region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>