force-app/main/default/objects/BER__c/fields/Responsable_de_secteur__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_secteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable de secteur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BERs1</relationshipName>
    <type>Lookup</type>
</CustomField>