force-app/main/default/objects/BER__c/fields/Secteur__c.field-meta.xml
<CustomField>
    <fullName>Secteur__c</fullName>
    <label>Secteur</label>
    <length>80</length>
    <type>Text</type>
</CustomField>