force-app/main/default/objects/BER__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Compte_partenaire_associe__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>